--- a/rv32/Makefile
+++ b/rv32/Makefile
@@ -1,7 +1,7 @@
 
 ITERATIONS      = 1
 
-GENERIC_OBJS  = ../core_main.o ../core_list_join.o ../core_matrix.o ../core_state.o ../core_util.o 
+GENERIC_OBJS  = ../core_main.o ../core_list_join.o ../core_matrix.o ../core_state.o ../core_util.o
 PLATFORM_OBJS = core_portme.o ee_printf.o
 OBJS          = start.o $(GENERIC_OBJS) $(PLATFORM_OBJS)
 
@@ -12,9 +12,9 @@ CFLAGS_COMMON += -DPERFORMANCE_RUN=1
 
 CFLAGS 		= $(CFLAGS_COMMON)
 
-LDFLAGS 	= --std=gnu99 -ffreestanding -nostdlib -lgcc
+LDFLAGS 	= --std=gnu99 -ffreestanding -nostdlib -lgcc -lc
 
-coremark_Os_rv32imc.bin: CFLAGS += -Os -march=rv32imc 
+coremark_Os_rv32imc.bin: CFLAGS += -Os -march=rv32imc
 coremark_Os_rv32imc.bin: EXE_NAME = coremark_Os_rv32imc
 
 coremark_O2_rv32imc.bin: CFLAGS += -O2 -march=rv32imc
@@ -26,21 +26,26 @@ coremark_Os_rv32im.bin: EXE_NAME = coremark_Os_rv32im
 coremark_O2_rv32im.bin: CFLAGS += -O2 -march=rv32im
 coremark_O2_rv32im.bin: EXE_NAME = coremark_O2_rv32im
 
+coremark_O3_rv32im.bin: CFLAGS += -O3 -march=rv32im
+coremark_O3_rv32im.bin: EXE_NAME = coremark_O3_rv32im
+
 coremark_O2_rv32i.bin: CFLAGS += -O2 -march=rv32i
 coremark_O2_rv32i.bin: EXE_NAME = coremark_O2_rv32i
 
 .PHONY: all
-all: 
+all:
 	make clean
 	make coremark_Os_rv32imc.bin coremark_Os_rv32imc.dis coremark_Os_rv32imc.hex
 	make clean
-	make coremark_O2_rv32imc.bin coremark_O2_rv32imc.dis coremark_O2_rv32imc.hex 
+	make coremark_O2_rv32imc.bin coremark_O2_rv32imc.dis coremark_O2_rv32imc.hex
 	make clean
-	make coremark_Os_rv32im.bin coremark_Os_rv32im.dis coremark_Os_rv32im.hex  
+	make coremark_Os_rv32im.bin coremark_Os_rv32im.dis coremark_Os_rv32im.hex
 	make clean
-	make coremark_O2_rv32im.bin coremark_O2_rv32im.dis coremark_O2_rv32im.hex  
+	make coremark_O2_rv32im.bin coremark_O2_rv32im.dis coremark_O2_rv32im.hex
 	make clean
-	make coremark_O2_rv32i.bin coremark_O2_rv32i.dis coremark_O2_rv32i.hex  
+	make coremark_O3_rv32im.bin coremark_O3_rv32im.dis coremark_O3_rv32im.hex
+	make clean
+	make coremark_O2_rv32i.bin coremark_O2_rv32i.dis coremark_O2_rv32i.hex
 
 coremark_%.dis: $(EXE_NAME).elf
 	$(TOOLCHAIN_PREFIX)objdump -D $< > $@
